fixed css on mobile

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,19 +1,15 @@
 .App {
+  display: flex;
   text-align: center;
+  /* flex: 1 0 auto; */
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
+
+
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,30 +18,22 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
 
 /* .react-select__menu {
   position:absolute;
   } */
 
-/* .leaflet-container{
+.leaflet-container{
   width: 100vw;
-  height: 100vw;
+  height: 100%;
+  overflow: none;
+  position: absolute
 
-} */
+}
 
 /* left aligns the map layer selection pane */
 .leaflet-control-layers-expanded{
@@ -62,13 +50,13 @@ table{
 
 
 
-.center-screen {
+/* .center-screen {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   min-height: 100vh;
-}
+} */
 
  
 .legend {
